fix lang menu overflow

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -7,6 +7,7 @@
   list-style: none;
   border-radius: 5px;
   z-index: 99;
+  right: -1rem;
 }
 
 .menu {
